create machine user for first instance

--- a/zitadel/init-steps.yaml
+++ b/zitadel/init-steps.yaml
@@ -14,4 +14,7 @@ FirstInstance:
       Email:
         Verified: true
       PreferredLanguage: en
-
+    Machine:
+      Machine:
+        UserName: admin-sa
+        Name: admin-sa
