--- a/pulumi/Pulumi.dev.yaml
+++ b/pulumi/Pulumi.dev.yaml
@@ -2,5 +2,5 @@ encryptionsalt: v1:3+NvibnLgN0=:v1:3ZkFbqV1yNyf2nrI:+MRPwS+O5N/S0nndVIlRwMadVLhK
 config:
   zitadel:domain: localhost
   zitadel:insecure: "true"
-  zitadel:jwtProfileFile: ../zitadel/machine-key.json
+  zitadel:jwtProfileFile: ../zitadel/secrets/machine-key.json
   zitadel:port: "8080"
